<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/game0"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/boneco" />

    <TextView
        android:id="@+id/gameLostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        android:text="@string/voc_perdeu"
        android:textColor="#884444"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"/>

    <TextView
        android:id="@+id/gameWonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        android:text="@string/voc_ganhou"
        android:textColor="#884444"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"/>

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:text="_ _ ABCD_ _ _ _ _ _ _"/>

    <TextView
        android:id="@+id/lettersUsedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/wordTextView"
        tools:text="Letras Usadas: A, B, C, D, E, F, G" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/jogar_novo_jogo"
        app:layout_constraintTop_toBottomOf="@+id/lettersUsedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:constraint_referenced_ids="a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z"
            app:flow_wrapMode="chain" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/a"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/b"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/d"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/e"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/f"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/g"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/h"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/i"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/j"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/k"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/l"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/m"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/n"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/p"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/q"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/r"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/s"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/t"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/u"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/v"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/w"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/y"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/z"
            android:textColor="@color/white"
            android:textSize="24sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>